feat: add theming support (#10)
* Convert logo into sprite

* Add theme basics

* Extract Sprite component

* Add some more overrides

* Update src/components/App.jsx

Co-authored-by: Daniel <eggerdnl@gmail.com>

* Move switch to settings view

Co-authored-by: Daniel <eggerdnl@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,18 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <title>JoinMarket</title>
+    <script>
+      window.JM = { SETTINGS_STORE_KEY: 'jm-settings', THEMES: ['light', 'dark'], THEME_ROOT_ATTR: 'data-theme' }
+      const settings = JSON.parse(window.localStorage.getItem(JM.SETTINGS_STORE_KEY) || '{}')
+      const userColorMode = settings.theme;
+      const systemColorMode = window.matchMedia('(prefers-color-scheme: dark)').matches ? JM.THEMES[1] : JM.THEMES[0];
+      const initialColorMode = JM.THEMES.includes(userColorMode) ? userColorMode : systemColorMode;
+      if (!userColorMode) {
+        const updatedSettings = Object.assign(settings, { theme: initialColorMode })
+        window.localStorage.setItem(JM.SETTINGS_STORE_KEY, JSON.stringify(updatedSettings))
+      }
+      document.documentElement.setAttribute(JM.THEME_ROOT_ATTR, initialColorMode)
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
