--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg">
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" crossorigin="use-credentials">
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#000000">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="msapplication-TileColor" content="#ffffff">
