--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg">
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" crossorigin="use-credentials">
-    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#000000">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" crossorigin="use-credentials" />
+    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#000000" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff">
-    <title>JoinMarket</title>
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
+    <title>Jam</title>
     <script>
       window.JM = { SETTINGS_STORE_KEY: 'jm-settings', THEMES: ['light', 'dark'], THEME_ROOT_ATTR: 'data-theme' }
       const settings = JSON.parse(window.localStorage.getItem(JM.SETTINGS_STORE_KEY) || '{}')
-      const userColorMode = settings.theme;
-      const systemColorMode = window.matchMedia('(prefers-color-scheme: dark)').matches ? JM.THEMES[1] : JM.THEMES[0];
-      const initialColorMode = JM.THEMES.includes(userColorMode) ? userColorMode : systemColorMode;
+      const userColorMode = settings.theme
+      const systemColorMode = window.matchMedia('(prefers-color-scheme: dark)').matches ? JM.THEMES[1] : JM.THEMES[0]
+      const initialColorMode = JM.THEMES.includes(userColorMode) ? userColorMode : systemColorMode
       if (!userColorMode) {
         const updatedSettings = Object.assign(settings, { theme: initialColorMode })
         window.localStorage.setItem(JM.SETTINGS_STORE_KEY, JSON.stringify(updatedSettings))
